src/components/TechSkillsComponent/skills.css
.Skills-header-wrapper {
    color: rgb(184, 35, 35);
    display: flex;
    width: 100%;
    justify-content: center;
    border: none;

}

.SkillsContainer {
    height: 600px;
    width: 100%;
    padding-top: 100px;
    list-style-type: none;
    justify-content: center;
    color: rgb(184, 35, 35);
    font-weight: 600;
    display: flex;
    flex-direction: row;
    border: none;

}


.code h2,
.toolbox h2,
.upcoming h2,
.more h2 {
    color: rgb(184, 35, 35);
    font-size: 32px;


}

ul {
    list-style-type: none;
}

.code h2 {
    color: rgb(184, 35, 35);
    background-color: rgb(255, 198, 247);
    width: 90px;
}

.toolbox h2 {
    color: rgb(184, 35, 35);
    background-color: rgb(189, 222, 255);
    width: 140px;
}

.upcoming h2 {
    color: rgb(184, 35, 35);
    background-color: rgb(191, 255, 213);
    width: 180px;
}

.more h2 {
    background-color: rgba(255, 222, 48, 1);
    color: blue;
    width: 90px;
}

@media (max-width: 667px) {
    .SkillsContainer {
        padding-top: 50px;
        display: block;
        height: 100%;
        justify-content: center;
        align-items: center;
        text-align: center;
        padding-bottom: 30px;
        border: none;
    }

    .code h2,
    .more h2 {
        font-size: 32px;
        display: inline-block;
        background-color: rgba(235, 85, 119, 1);
        width: auto;

    }

    .toolbox h2 {
        font-size: 32px;
        display: inline-block;
        background-color: rgba(36, 131, 224, 1);
        width: auto;
    }

    .upcoming h2 {
        font-size: 32px;
        display: inline-block;
        background-color: rgba(109, 180, 134, 1);
        width: auto;

    }

    .more h2 {
        font-size: 32px;
        display: inline-block;
        background-color: rgba(255, 222, 48, 1);
        width: auto;

    }


}

